⛽️🌗 Checkpoint ./vite.config.js:53217105/703 ./package.json:53217105/1766 ./server.js:53217105/1562

--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "svelte-material-icons": "^3.0.5",
     "three": "^0.165.0",
     "vite-plugin-cesium": "^1.2.22",
-    "express": "^4.17.1",    // Pridajte Express.js na server-side rendering
-    "http-proxy-middleware": "^2.0.6"  // Pridajte proxy middleware, ak je potrebný
+    "express": "^4.17.1",
+    "http-proxy-middleware": "^2.0.6"
   },
   "description": "This is the code of EarthLink for Google's immersive geospatial challenge.",
-  "main": "server.js",  // Nastavte server.js ako vstupný bod pre aplikáciu
+  "main": "server.js",
   "author": "",
   "license": "ISC"
 }
