--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "svelte-material-icons": "^3.0.5",
     "three": "^0.165.0",
     "vite-plugin-cesium": "^1.2.22",
-    "express": "^4.17.1",
-    "http-proxy-middleware": "^2.0.6"
+    "express": "^4.19.2",
+    "http-proxy-middleware": "^3.0.0"
   },
   "description": "This is the code of EarthLink for Google's immersive geospatial challenge.",
   "main": "server.js",
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "engines": {
+    "node": ">=16.0.0"
+  }
 }
